<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="new_task_shortcut"
        android:enabled="true"
        android:icon="@drawable/ic_new_task"
        android:shortcutShortLabel="@string/new_task_shortcut_short_label"
        android:shortcutLongLabel="@string/new_task_shortcut_long_label">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="net.karthikraj.demo.manifestshortcut"
            android:targetClass="net.karthikraj.demo.manifestshortcut.NewTaskActivity"/>
    </shortcut>

    <shortcut
        android:shortcutId="completed_tasks_shortcut"
        android:enabled="true"
        android:icon="@drawable/ic_completed"
        android:shortcutShortLabel="@string/completed_tasks_shortcut_short_label"
        android:shortcutLongLabel="@string/completed_tasks_shortcut_long_label"
        android:shortcutDisabledMessage="@string/completed_tasks_shortcut_disabled_message">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="net.karthikraj.demo.manifestshortcut"
            android:targetClass="net.karthikraj.demo.manifestshortcut.TodoMainActivity"/>
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="net.karthikraj.demo.manifestshortcut"
            android:targetClass="net.karthikraj.demo.manifestshortcut.CompletedTasksActivity"/>
    </shortcut>

    <shortcut
        android:shortcutId="inprogress_tasks_shortcut"
        android:enabled="true"
        android:icon="@drawable/ic_in_progress"
        android:shortcutShortLabel="@string/inprogress_tasks_shortcut_short_label"
        android:shortcutLongLabel="@string/inprogress_tasks_shortcut_long_label"
        android:shortcutDisabledMessage="@string/inprogress_tasks_shortcut_disabled_message">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="net.karthikraj.demo.manifestshortcut"
            android:targetClass="net.karthikraj.demo.manifestshortcut.TodoMainActivity"/>
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="net.karthikraj.demo.manifestshortcut"
            android:targetClass="net.karthikraj.demo.manifestshortcut.InProgressTasksActivity"/>
    </shortcut>

</shortcuts>